# anime-mcp-server

./: .env.example  .gitignore  API_Parameters_Reference.md  API_TESTING_RESULTS.md  Anime_MCP_Server.postman_collection.json  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_PLAN_PRIORITIZED.md  Dockerfile  INTEGRATION_COMPLETE.md  MCP_SERVER_INTEGRATION_PLAN.md  PLANNING.md  PLANNING_SCRATCHPAD.md  README.md  TASKS.md  UPDATE_STRATEGY.md  anime_planet_dandadan_output.json  anime_planet_search_results.json  animeplanet_cowboy_bebop_dump.json  animeplanet_helper_test_output.json  animeschedule_cowboy_bebop_dump.json  base_anime_sample.json  character_data_analysis.md  character_merging_strategy.md  character_processing_summary.md  check_qdrant_coverage.py  cowboy_bebop_episodes_detailed.json  current_sprint.md  debug_mcp_server.py  docker-compose.yml  download_data.py  enhanced_anime_schema_example.json  gemini_instructions.md  jikan_aot_characters_detailed.json  jikan_aot_characters_input.json  jikan_characters_input.json  jikan_cowboy_bebop_characters_basic.json  jikan_cowboy_bebop_characters_detailed.json  jikan_cowboy_bebop_dump.json  kitsu_cowboy_bebop_characters.json  (+35 more)
.claude/: settings.json
.claude/commands/: dev_cmd.md  fastmcp_doc.md  git_cmd.md  issue_cmd.md  langchain_doc.md  langgraph_doc.md  marqo_doc_cmd.md  qdrant_doc.md
.cursor/rules/: debug.mdc  error-documentation.mdc  lessons-learned.mdc
Rules/: error-documentation.md  lessons-learned.md  memory.md
data/: enriched_anime_database.json
docs/: API_RATE_LIMITS.md  anilist.txt  architecture.md  comprehensive_relationship_types_by_source.md  platform_configuration.md  product_requirement_docs.md  query.txt  query_parameter_mapping.md  response_mapping_analysis.md  technical.md
docs/research/: langgraph_routing_research.md
postman/: Anime_MCP_Server_Complete.postman_collection.json  Anime_MCP_Server_Local.postman_environment.json
rules/: directory-structure.mdc  error-documentation.mdc  lessons-learned.mdc  memory.mdc
scripts/: add_image_embeddings.py  benchmark_modern_embeddings.py  comprehensive_image_analysis.py  demo_image_search.py  fetch_detailed_jikan_data.py  migrate_to_multivector.py  run_anime_fine_tuning.py  scraping_poc.py  scraping_with_apis.py  setup_cron.sh  setup_smart_cron.sh  setup_weekly_cron.sh  smart_weekly_update.py  test_image_search.py  test_image_search_realtime.py  test_intelligent_routing.py  test_intent_based_routing.py  test_mcp.py  test_mcp_image_search.py  test_mcp_image_tools.py  test_mcp_server_comprehensive.py  test_real_llm_workflow.py  test_scraping.py  test_scraping_research.py  test_scraping_v2.py  update_database_smart.py  update_database_weekly.py  verify_mcp_server.py  weekly_update.py
src/: config.py  exceptions.py  main.py
src/anime_mcp/: __init__.py  client_factory.py  errors.py  modern_client.py  modern_server.py  schemas.py  server.py
tasks/: active_context.md  tasks_plan.md
tests/: conftest.py  test_exceptions.py  test_iterative_ai_enrichment.py  test_main.py  test_parallel_supersteps.py  test_send_api_router.py  test_stateful_routing_memory.py  test_swarm_agents.py
(+262 files in other folders)
